--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import "reset.css";
+@import "./reset.css";
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,900;1,700&display=swap");
 
 body {
